...
    tools:context=".Activities.TimetableSettingsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backGroundColor">
        <TextView
            android:id="@+id/settingsPage"
            android:layout_width="407dp"
            android:layout_height="56dp"
            android:autoSizeMaxTextSize="40sp"
            android:autoSizeMinTextSize="30sp"
            android:autoSizeTextType="uniform"
            android:text="Settings"
...
            app:boxStrokeColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/semesterSpinner1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/settingsPage">
            <AutoCompleteTextView
                android:id="@+id/aySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="none">

...
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/aySpinner1"
            app:layout_constraintTop_toBottomOf="@+id/settingsPage">

            <AutoCompleteTextView
                android:id="@+id/semesterSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="none">

...
                    android:autoSizeTextType="uniform"
                    android:text="Module 1: "
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/moduleCode1"
                    android:layout_width="285dp"
                    android:layout_height="48dp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:layout_marginEnd="20dp"
...
                    android:autoSizeTextType="uniform"
                    android:text="Module 2: "
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/moduleCode2"
                    android:layout_width="285dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
...
                    android:autoSizeTextType="uniform"
                    android:text="Module 3: "
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/moduleCode3"
                    android:layout_width="285dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
...
                    android:autoSizeTextType="uniform"
                    android:text="Module 4: "
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/moduleCode4"
                    android:layout_width="285dp"
                    android:layout_height="48dp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:layout_marginEnd="20dp"
...
                    android:autoSizeTextType="uniform"
                    android:text="Module 5: "
                    android:textAlignment="center"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/moduleCode5"
                    android:layout_width="285dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
...
                    android:textColor="@color/black"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/addRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="Add Row"
            android:textColor="@color/black"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.993"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrappingLayout" />

        <CheckBox
            android:id="@+id/no8amLessons"
            android:layout_width="217dp"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="10sp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addRow" />

        <CheckBox
            android:id="@+id/oneFreeDay"
            android:layout_width="217dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="10sp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.113"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no8amLessons" />

        <Button
            android:id="@+id/saveTimetableSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/black"
...
