...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#95b4de">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginTop="72dp"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeMinTextSize="2sp"
            android:autoSizeTextType="uniform"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:startIconDrawable="@android:drawable/ic_dialog_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="2sp"
                android:autoSizeTextType="uniform"
                android:autofillHints="Email"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAddress1"
            app:startIconDrawable="@android:drawable/ic_lock_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="2sp"
...
