<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="2016-2017"/>
    <item android:title="2017-2018"/>
    <item android:title="2018-2019"/>
    <item android:title="2019-2020"/>
    <item android:title="2020-2021"/>
    <item android:title="2021-2022"/>
    <item android:title="2022-2023"/>
</menu>